--- a/src/scss/utils/_container.scss
+++ b/src/scss/utils/_container.scss
@@ -4,7 +4,7 @@
   padding-right: var(--container-padding);
   padding-left: var(--container-padding);
   outline: 1px solid brown;
-  background-color: green;
+  // background-color: green;
   max-width: var(--container-width);
   width: 100%;
   // max-width: calc(1290px + 30px);
