--- a/src/scss/utils/_global.scss
+++ b/src/scss/utils/_global.scss
@@ -59,16 +59,15 @@ address {
 }
 
 body {
-    background-color: var(--page-bg);
+    background-color: var(--black);
     min-width: 100vw;
-    color: var(--text-color);
-    font-family: FirasansBook, sans-serif;
-    // font-family: 'Circe', sans-serif;
+    color: var(--black);
+    font-family: var(--font-family), sans-serif;
     font-size: 16px;
-    // font-weight: 400;
+    font-weight: 400;
     overflow-x: hidden;
+    line-height: calc(19/16);
     // font-size: clamp(0.75rem, 0.556rem + 0.86vw, 1.25rem);
-    // line-height: 1.4;
 }
 
 button {
