--- a/src/scss/utils/_sticky-footer.scss
+++ b/src/scss/utils/_sticky-footer.scss
@@ -9,7 +9,6 @@ body {
     margin-top: auto;
 }
 
-.footer {
-    padding: 60px 0;
-    background-color: #e3e3e3;
-}
+// .footer {
+//     padding: 50px 22px;
+// }
