--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,13 +1,64 @@
 .footer {
-  background-color: rgb(0, 128, 111);
-  background: url('@img/new/images2@1x.jpg') left center / 240px 240px no-repeat;
+  margin-bottom: 100px;
 
-  &__h2 {
-    font-size: 48px;
+  &__title {
+    margin-bottom: 30px;
   }
 
+  &__content {
+    background-color: var(--caramel);
+    border-radius: var(--border-radius);
+    // padding: 50px20  49px6 22px12;
+    padding: clamp(1.25rem, 0.568rem + 3.41vw, 3.125rem) clamp(0.375rem, -0.602rem + 4.89vw, 3.063rem) clamp(0.75rem, 0.523rem + 1.14vw, 1.375rem);
+  }
 
-  @media screen and (width <=1200px) {
-    background-color: olive;
+  &__contacts {
+    display: flex;
+    font-weight: 700;
+    // font-size: 20px; 16
+    font-size: clamp(1.125rem, 1.08rem + 0.23vw, 1.25rem);
+    line-height: 130%;
+    flex-wrap: wrap;
+  }
+
+  &__address {
+    flex-basis: 50%;
+  }
+
+  &__item {
+
+    &--width {
+      flex-basis: 50%;
+
+      @media screen and (width >=866px) {
+        padding-left: 10px;
+      }
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 36px;
+  }
+
+  &__logo {
+    flex-basis: calc(50% + 10px);
+  }
+
+  @media screen and (width <=920px) {
+    &__btn {
+      margin-left: auto;
+      margin-top: 20px;
+    }
+  }
+
+  @media screen and (width <=866px) {
+    &__contacts {
+      flex-direction: column;
+      gap: 30px;
+      text-align: center;
+    }
   }
 }
