--- a/src/scss/utils/_fonts.scss
+++ b/src/scss/utils/_fonts.scss
@@ -1,126 +1,14 @@
 @font-face {
-	font-family: AmericanRetro;
+	font-family: Inter;
 	font-display: swap;
-	src: url("../fonts/AmericanRetro.woff2") format("woff2");
-
-						
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: Circe;
-	font-display: swap;
-	src: url("../fonts/Circe-Regular.woff2") format("woff2");
-
-						
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: Circe;
-	font-display: swap;
-	src: url("../fonts/Circe-Bold.woff2") format("woff2");
-
-						
+	src: url("../fonts/Inter-Bold.woff2") format("woff2"), url("../fonts/Inter-Bold.woff") format("woff");
 	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
-	font-family: FirasansBook;
+	font-family: Inter;
 	font-display: swap;
-	src: url("../fonts/FirasansBook.woff2") format("woff2");
-
-						
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-Black.woff2") format("woff2");
-
-						
-	font-weight: 900;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-Bold.woff2") format("woff2");
-
-						
-	font-weight: 700;
-	font-style: normal;
-}
-@font-face {
-	font-family: Montserrat;
-	font-display: swap;
-	src: url("../fonts/Montserrat-Bold.woff2") format("woff2");
-
-						
-	font-weight: 700;
-	font-style: normal;
-}
-@font-face {
-	font-family: Montserrat;
-	font-display: swap;
-	src: url("../fonts/Montserrat-BoldItalic.woff2") format("woff2");
-
-						
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: Montserrat;
-	font-display: swap;
-	src: url("../fonts/Montserrat-SemiBold.woff2") format("woff2");
-
-						
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: Montserrat;
-	font-display: swap;
-	src: url("../fonts/Montserrat-Regular.woff2") format("woff2");
-
-						
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: SFUIText;
-	font-display: swap;
-	src: url("../fonts/SFUIText-Medium.woff2") format("woff2");
-
-						
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: SFUIText;
-	font-display: swap;
-	src: url("../fonts/SFUIText-Regular.woff2") format("woff2");
-
-						
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: SFUIText;
-	font-display: swap;
-	src: url("../fonts/SFUIText-Semibold.woff2") format("woff2");
-
-						
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: _fonts;
-	font-display: swap;
-	src: url("../fonts/_fonts.woff2") format("woff2");
-
-						
+	src: url("../fonts/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter-Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
