--- a/src/scss/utils/_icons.scss
+++ b/src/scss/utils/_icons.scss
@@ -7,39 +7,29 @@
 .icon {
 	fill: transparent;
 	stroke: transparent;
-	width: 62px;
-	height: 62px;
+	width: clamp(13.75rem, 10.909rem + 14.2vw, 21.563rem);
+	// width: 62px;
+	height: 44px;
 }
 
-.icon--heart-line {
-	fill: rgb(241, 68, 131);
+.icon--logo-header {
+	fill: var(--white);
+	// width: 345px;
+	// width: clamp(13.75rem, 10.909rem + 14.2vw, 21.563rem);
+	// min-width: 220px;
+	// height: 44px;
 }
 
-.icon--id-card-line {
-	fill: rgb(51, 51, 51);
+.icon--logo-footer {
+	fill: var(--black);
 }
 
-.icon--search-line {
-	fill: rgb(28, 176, 80);
-}
 
-.icon--user-star {
-	fill: rgb(26, 134, 235);
-}
+// .icon--user {
+// 	stroke: rgb(26, 134, 235);
+// 	transition: all 0.2s ease-in;
 
-.icon--person {
-	fill: rgb(26, 235, 218);
-}
-
-.icon--vector {
-	fill: rgb(235, 26, 235);
-}
-
-.icon--user {
-	stroke: rgb(26, 134, 235);
-	transition: all 0.2s ease-in;
-
-	&:hover {
-		stroke: rgb(17, 193, 90);
-	}
-}
+// 	&:hover {
+// 		stroke: rgb(17, 193, 90);
+// 	}
+// }
