--- a/src/scss/utils/_vars.scss
+++ b/src/scss/utils/_vars.scss
@@ -1,16 +1,14 @@
 :root {
+    --brown: #3c342e;
+    --black: #000;
+    --white: #fff;
+    --caramel: #8f7e70;
+    --light-caramel: #b5a395;
+    --black: #000;
+    --bege: #ccc1b4;
+
+
     --font-family: "Inter", sans-serif;
-    --second-family: "Alex Brush", sans-serif;
-    --third-family: "Cormorant", sans-serif;
-    --font3: "Roboto", sans-serif;
-    --font4: "Poppins", sans-serif;
-    --font5: "Source Sans Pro", sans-serif;
-
-
-    --solid: #7a0000;
-    --bg: rgba(164, 164, 164, 0.15);
-    --accent-color: #7a0000;
-
 
     --box-shadow: 0 4px 4px -4px rgba(30, 33, 44, 0.03),
         0 12px 10px -6px rgba(154, 156, 165, 0.04),
@@ -28,11 +26,9 @@
     --swiper-theme-color: var(--accent-color);
     --indent: max(15px, calc((100% - 1600px) /2));
 
-    --text-color: #252526;
-    --page-bg: #fff;
-
-
-    --container-width: 1200px;
+    --text-color: #000;
+    // --page-bg: #fff;
+    --container-width: 1230px;
     --container-padding: 15px;
 
     --laptop-size: 1199px;
@@ -40,20 +36,10 @@
     --mobile-size: 599px;
 }
 
-$accent: #7a0000;
-$solid: #7a0000;
-$sangria: #9D0000;
-$see-all: #970000;
-$bg: rgba(164, 164, 164, 0.15);
-$main-color: #121212;
-$white: #FFF;
-$wild-sand: #f4f4f4;
-$black: #000;
-
-.dark {
-    --page-bg: #252526;
-    --text-color: #fff;
-}
+// .dark {
+//     --page-bg: #252526;
+//     --text-color: #fff;
+// }
 
 
 
