--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -25,7 +25,7 @@
     display: grid;
     gap: 30px;
     border-top-left-radius: var(--border-radius);
-    border-top-right-radius: var(--border-radius);
+    // border-top-right-radius: var(--border-radius);
 
   }
 
@@ -41,5 +41,32 @@
   &__text {
     max-width: 952px;
 
+  }
+
+  @media screen and (width <=1024px) {
+
+    &__box {
+      padding-bottom: 0px;
+    }
+  }
+
+  @media screen and (width <=768px) {
+    &__box {
+      padding: 50px 20px 10px;
+    }
+  }
+
+  @media screen and (width <=425px) {
+    &__wrapper {
+      padding-bottom: 50px;
+
+      &::after {
+        display: none;
+      }
+    }
+
+    &__box {
+      border-bottom-right-radius: var(--border-radius);
+    }
   }
 }
