modified:   src/scss/components/_about.scss, modified:   src/scss/components/_projects.scss

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -6,7 +6,7 @@
 
     &::after {
       content: '';
-      background-image: url(../../images/about/slise-bg.png);
+      background-image: url(../images/about/slise-bg.png);
       width: 100%;
       height: 143px;
       position: absolute;
