--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -81,7 +81,7 @@
 
     &:last-child {
       background-color: transparent;
-      background-image: url(../../images/slider/li-bg.webp);
+      background-image: url(../images/slider/li-bg.webp);
       height: 130px;
       background-repeat: no-repeat;
       background-position: bottom;
